--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>in.iitkaa</groupId>
     <artifactId>mailsender</artifactId>
     <version>0.1.0</version>
+    <packaging>war</packaging>
     <description>A java tool to send emails.</description>
     <url>http://iitkaa.in</url>
     <licenses>
@@ -28,6 +29,17 @@
     <properties>
         <java.version>1.8</java.version>
         <sendgrid.version>2.1.0</sendgrid.version>
+
+        <gson-version>2.2.4</gson-version>
+        <junit-version>4.11</junit-version>
+        <struts-version>2.3.16</struts-version>
+        <lombok-version>1.12.2</lombok-version>
+        <spring-version>4.0.0.RELEASE</spring-version>
+        <commons-lang-version>3.2.1</commons-lang-version>
+        <commons-codec-version>1.9</commons-codec-version>
+        <mongo-driver-version>2.11.3</mongo-driver-version>
+        <javax-servlet-version>3.1.0</javax-servlet-version>
+        <maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
     </properties>
 
     <build>
@@ -82,6 +94,63 @@
             <groupId>com.sendgrid</groupId>
             <artifactId>sendgrid-java</artifactId>
             <version>${sendgrid.version}</version>
+        </dependency>
+
+        <!-- STRUTS2 -->
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-convention-plugin</artifactId>
+            <version>${struts-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-core</artifactId>
+            <version>${struts-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.struts.xwork</groupId>
+            <artifactId>xwork-core</artifactId>
+            <version>${struts-version}</version>
+        </dependency>
+
+        <!-- SPRING -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc-portlet</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <!-- SERVLET -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax-servlet-version}</version>
         </dependency>
 
     </dependencies>
