Moving towards more structured form

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
+                    <version>${maven-compiler-plugin-version}</version>
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
@@ -63,7 +63,6 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-
     </build>
 
     <dependencies>
@@ -79,14 +78,14 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.2.1</version>
+            <version>${commons-lang-version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.12.2</version>
+            <version>${lombok-version}</version>
             <scope>compile</scope>
         </dependency>
 
