--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <version>${sendgrid.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>${mongo-driver-version}</version>
+        </dependency>
+
         <!-- STRUTS2 -->
         <dependency>
             <groupId>org.apache.struts</groupId>
