--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
     <packaging>war</packaging>
     <description>A java tool to send emails.</description>
     <url>http://iitkaa.in</url>
+    <parent>
+        <groupId>com.nishionline.struts.core</groupId>
+        <artifactId>strutsBase</artifactId>
+        <version>${struts.base.version}</version>
+    </parent>
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -27,19 +33,8 @@
     </developers>
 
     <properties>
-        <java.version>1.8</java.version>
+        <struts.base.version>0.1.0</struts.base.version>
         <sendgrid.version>2.1.0</sendgrid.version>
-
-        <gson-version>2.2.4</gson-version>
-        <junit-version>4.11</junit-version>
-        <struts-version>2.3.16</struts-version>
-        <lombok-version>1.12.2</lombok-version>
-        <spring-version>4.0.0.RELEASE</spring-version>
-        <commons-lang-version>3.2.1</commons-lang-version>
-        <commons-codec-version>1.9</commons-codec-version>
-        <mongo-driver-version>2.11.3</mongo-driver-version>
-        <javax-servlet-version>3.1.0</javax-servlet-version>
-        <maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
     </properties>
 
     <build>
@@ -66,102 +61,10 @@
     </build>
 
     <dependencies>
-        <!-- For unit testing -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- For helper methods -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang-version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok-version}</version>
-            <scope>compile</scope>
-        </dependency>
-
         <dependency>
             <groupId>com.sendgrid</groupId>
             <artifactId>sendgrid-java</artifactId>
             <version>${sendgrid.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>${mongo-driver-version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson-version}</version>
-        </dependency>
-
-        <!-- STRUTS2 -->
-        <dependency>
-            <groupId>org.apache.struts</groupId>
-            <artifactId>struts2-convention-plugin</artifactId>
-            <version>${struts-version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.struts</groupId>
-            <artifactId>struts2-core</artifactId>
-            <version>${struts-version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.struts.xwork</groupId>
-            <artifactId>xwork-core</artifactId>
-            <version>${struts-version}</version>
-        </dependency>
-
-        <!-- SPRING -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring-version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring-version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring-version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc-portlet</artifactId>
-            <version>${spring-version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-websocket</artifactId>
-            <version>${spring-version}</version>
-        </dependency>
-
-        <!-- SERVLET -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${javax-servlet-version}</version>
         </dependency>
 
     </dependencies>
